<project>
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.qtc.beanshooter</groupId>
        <artifactId>reactor</artifactId>
        <version>3.1.1</version>
    </parent>

    <artifactId>beanshooter</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
          <groupId>net.sourceforge.argparse4j</groupId>
          <artifactId>argparse4j</artifactId>
          <version>0.9.0</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.29.2-GA</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.external</groupId>
            <artifactId>opendmk_jmxremote_optional_jar</artifactId>
            <version>1.0-b01-ea</version>
        </dependency>

    </dependencies>

    <build>

        <sourceDirectory>src</sourceDirectory>

        <resources>

          <resource>
             <directory>.</directory>
             <includes>
                 <include>config.properties</include>
                 <include>default-credentials.txt</include>
             </includes>
          </resource>

          <resource>
              <directory>../tonka-bean/target</directory>
             <includes>
                 <include>tonka-bean*</include>
             </includes>
          </resource>

        </resources>

        <plugins>
          <plugin>
              <artifactId>maven-assembly-plugin</artifactId>
              <executions>
                <execution>
                  <phase>package</phase>
                  <goals>
                    <goal>single</goal>
                  </goals>
                </execution>
              </executions>
              <configuration>
                <finalName>beanshooter-${project.version}</finalName>
                <archive>
                    <manifest>
                        <mainClass>de.qtc.beanshooter.Starter</mainClass>
                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    </manifest>
                    <manifestEntries>
                        <Add-Opens>
                            java.base/java.lang.reflect
                            java.base/jdk.internal.misc
                            java.rmi/java.rmi.server
                            java.rmi/sun.rmi.server
                            java.rmi/sun.rmi.transport
                            java.rmi/sun.rmi.transport.tcp
                        </Add-Opens>
                    </manifestEntries>
                </archive>
                <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
                <outputDirectory>../target</outputDirectory>
              </configuration>
          </plugin>

          <plugin>
              <artifactId>maven-jar-plugin</artifactId>
              <version>3.2.0</version>
              <executions>
                <execution>
                   <id>default-jar</id>
                   <phase>none</phase>
                </execution>
              </executions>
          </plugin>
        </plugins>

    </build>
</project>
